--- a/client/mainwindow.ui
+++ b/client/mainwindow.ui
@@ -37,7 +37,29 @@
      </widget>
     </item>
     <item row="1" column="0" colspan="2">
-     <widget class="QTableView" name="lst_orders"/>
+     <widget class="QTableView" name="lst_orders">
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
+      <property name="showGrid">
+       <bool>false</bool>
+      </property>
+      <property name="cornerButtonEnabled">
+       <bool>false</bool>
+      </property>
+      <attribute name="horizontalHeaderVisible">
+       <bool>true</bool>
+      </attribute>
+      <attribute name="horizontalHeaderHighlightSections">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
+      <attribute name="verticalHeaderHighlightSections">
+       <bool>false</bool>
+      </attribute>
+     </widget>
     </item>
     <item row="1" column="3" colspan="2">
      <widget class="QListView" name="lst_client_orders"/>
@@ -81,7 +103,7 @@
      <x>0</x>
      <y>0</y>
      <width>688</width>
-     <height>21</height>
+     <height>26</height>
     </rect>
    </property>
   </widget>
