--- a/staff/mainwindow.ui
+++ b/staff/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>391</width>
-    <height>608</height>
+    <width>605</width>
+    <height>410</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -15,27 +15,30 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0" colspan="3">
-     <widget class="QTableView" name="tableView"/>
+    <item row="0" column="0" colspan="2">
+     <widget class="QLabel" name="title">
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignCenter</set>
+      </property>
+     </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QPushButton" name="pushButton">
+    <item row="1" column="0" colspan="2">
+     <widget class="QTextEdit" name="description"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QPushButton" name="operation_done">
       <property name="text">
        <string>Done</string>
       </property>
      </widget>
     </item>
-    <item row="1" column="1">
-     <widget class="QPushButton" name="pushButton_3">
+    <item row="2" column="1">
+     <widget class="QPushButton" name="get_operation">
       <property name="text">
-       <string>Take</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="2">
-     <widget class="QPushButton" name="pushButton_2">
-      <property name="text">
-       <string>Refresh</string>
+       <string>Get</string>
       </property>
      </widget>
     </item>
@@ -46,7 +49,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>391</width>
+     <width>605</width>
      <height>21</height>
     </rect>
    </property>
