--- a/db_admin/OrderEdit.ui
+++ b/db_admin/OrderEdit.ui
@@ -7,11 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>616</width>
-    <height>567</height>
+    <height>415</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Wizard</string>
+  </property>
+  <property name="modal">
+   <bool>true</bool>
   </property>
   <widget class="QWizardPage" name="wizardPage">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -41,13 +44,36 @@
      </widget>
     </item>
     <item row="1" column="0" alignment="Qt::AlignLeft">
-     <widget class="QTableView" name="tableView"/>
+     <widget class="QTableView" name="operNames"/>
     </item>
     <item row="1" column="1">
-     <widget class="QTableView" name="tableView_2"/>
+     <widget class="QTableView" name="algoList">
+      <property name="contextMenuPolicy">
+       <enum>Qt::CustomContextMenu</enum>
+      </property>
+      <property name="editTriggers">
+       <set>QAbstractItemView::NoEditTriggers</set>
+      </property>
+      <property name="selectionMode">
+       <enum>QAbstractItemView::SingleSelection</enum>
+      </property>
+      <property name="selectionBehavior">
+       <enum>QAbstractItemView::SelectRows</enum>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
+  <action name="act_editParents">
+   <property name="text">
+    <string>Edit parents</string>
+   </property>
+  </action>
+  <action name="act_deleteItem">
+   <property name="text">
+    <string>Delete item</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
