--- a/db_admin/src/StaffMemberEdit.ui
+++ b/db_admin/src/StaffMemberEdit.ui
@@ -19,7 +19,11 @@
     </widget>
    </item>
    <item>
-    <widget class="QTableView" name="staffSkills"/>
+    <widget class="QListView" name="skillView">
+     <property name="contextMenuPolicy">
+      <enum>Qt::CustomContextMenu</enum>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
@@ -32,14 +36,14 @@
     </widget>
    </item>
   </layout>
-  <action name="actDeleteSkill">
+  <action name="act_addSkill">
    <property name="text">
-    <string>Delete skill</string>
+    <string>Add new skill</string>
    </property>
   </action>
-  <action name="actEditSkill">
+  <action name="act_delSkill">
    <property name="text">
-    <string>Edit skill</string>
+    <string>Delete skill</string>
    </property>
   </action>
  </widget>
