--- a/db_admin/src/SkillAdd.ui
+++ b/db_admin/src/SkillAdd.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>SkillAdd</class>
  <widget class="QDialog" name="SkillAdd">
+  <property name="windowModality">
+   <enum>Qt::WindowModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +14,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Add skill</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0">
