--- a/db_admin/src/OrderEdit.ui
+++ b/db_admin/src/OrderEdit.ui
@@ -43,9 +43,6 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0" alignment="Qt::AlignLeft">
-     <widget class="QTableView" name="operNames"/>
-    </item>
     <item row="1" column="1">
      <widget class="QTableView" name="algoList">
       <property name="contextMenuPolicy">
@@ -61,6 +58,9 @@
        <enum>QAbstractItemView::SelectRows</enum>
       </property>
      </widget>
+    </item>
+    <item row="1" column="0" alignment="Qt::AlignLeft">
+     <widget class="QListView" name="operNames"/>
     </item>
    </layout>
   </widget>
